{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 45,
  "lineage": "0c6a3a51-5dcd-b56e-9c16-fc2e5dda0022",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dns",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09d246ada0ae2e13c",
            "arn": "arn:aws:ec2:us-east-1:001920056207:instance/i-098666a7596fdb9fa",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-098666a7596fdb9fa",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_hyperion",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-047c3f8b328e064b9",
            "private_dns": "ip-10-251-0-148.ec2.internal",
            "private_ip": "10.251.0.148",
            "public_dns": "ec2-3-86-139-178.compute-1.amazonaws.com",
            "public_ip": "3.86.139.178",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-006b2d76dd20497c2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00aba1284c47882f4",
            "tags": {
              "Name": "dns-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-026c2e8610ed382d6",
              "sg-05f62e04fe78c0e68",
              "sg-0bdff2b0ddb9168ec"
            ]
          },
          "dependencies": [
            "aws_security_group.dns_sg",
            "aws_security_group.icpm_sg",
            "aws_security_group.ssh_sg",
            "aws_subnet.public_01",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09d246ada0ae2e13c",
            "arn": "arn:aws:ec2:us-east-1:001920056207:instance/i-0852a833a2d21833d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0852a833a2d21833d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_hyperion",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-010ee3cb4e74488bc",
            "private_dns": "ip-10-251-0-142.ec2.internal",
            "private_ip": "10.251.0.142",
            "public_dns": "ec2-54-89-229-173.compute-1.amazonaws.com",
            "public_ip": "54.89.229.173",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-094c346c7d20ce50b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00aba1284c47882f4",
            "tags": {
              "Name": "loadbalancer-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05f62e04fe78c0e68",
              "sg-0bdff2b0ddb9168ec"
            ]
          },
          "dependencies": [
            "aws_security_group.icpm_sg",
            "aws_security_group.ssh_sg",
            "aws_subnet.public_01",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001920056207:internet-gateway/igw-07fa4dc3119f37988",
            "id": "igw-07fa4dc3119f37988",
            "owner_id": "001920056207",
            "tags": {
              "Name": "demo-igw"
            },
            "vpc_id": "vpc-0cba2eb156c01b39c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0377a2b41832bf28d",
            "owner_id": "001920056207",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07fa4dc3119f37988",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-public-rt"
            },
            "vpc_id": "vpc-0cba2eb156c01b39c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c46540242aae00e",
            "route_table_id": "rtb-0377a2b41832bf28d",
            "subnet_id": "subnet-00aba1284c47882f4"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_01",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dns_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001920056207:security-group/sg-026c2e8610ed382d6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-026c2e8610ed382d6",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.251.0.0/16",
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "10.251.0.0/16",
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              }
            ],
            "name": "demo-dns_sg",
            "name_prefix": "",
            "owner_id": "001920056207",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-dns_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cba2eb156c01b39c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "es_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001920056207:security-group/sg-059307007489d9e48",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-059307007489d9e48",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.251.0.0/16",
                  "0.0.0.0/0"
                ],
                "description": "Liberacao HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.251.0.0/16",
                  "0.0.0.0/0"
                ],
                "description": "Liberacao HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.251.0.0/16",
                  "0.0.0.0/0"
                ],
                "description": "Liberacao Kibana",
                "from_port": 5601,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5601
              }
            ],
            "name": "demo-es_sg",
            "name_prefix": "",
            "owner_id": "001920056207",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-es_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cba2eb156c01b39c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "icpm_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001920056207:security-group/sg-05f62e04fe78c0e68",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f62e04fe78c0e68",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.251.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "demo-icpm_sg",
            "name_prefix": "",
            "owner_id": "001920056207",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-icpm_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cba2eb156c01b39c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001920056207:security-group/sg-0bdff2b0ddb9168ec",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bdff2b0ddb9168ec",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.251.0.0/16",
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "demo-ssh_sg",
            "name_prefix": "",
            "owner_id": "001920056207",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-ssh_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cba2eb156c01b39c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001920056207:subnet/subnet-00aba1284c47882f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.251.0.0/24",
            "id": "subnet-00aba1284c47882f4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "001920056207",
            "tags": {
              "Name": "demo-public-subnet-us-east-1a"
            },
            "tags_all": {
              "Name": "demo-public-subnet-us-east-1a"
            },
            "vpc_id": "vpc-0cba2eb156c01b39c"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001920056207:vpc/vpc-0cba2eb156c01b39c",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.251.0.0/16",
            "default_network_acl_id": "acl-087304a563a1615fc",
            "default_route_table_id": "rtb-0b28036cf7d224b8c",
            "default_security_group_id": "sg-010ec4a0d2b501b5a",
            "dhcp_options_id": "dopt-906239ea",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0cba2eb156c01b39c",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0d892ccc9e72a88c3",
            "ipv6_cidr_block": "2600:1f18:16fc:ab00::/56",
            "main_route_table_id": "rtb-0b28036cf7d224b8c",
            "owner_id": "001920056207",
            "tags": {
              "Name": "demo-vpc"
            },
            "tags_all": {
              "Name": "demo-vpc"
            }
          }
        }
      ]
    }
  ]
}